Synchro added (needs cleaning)

--- a/nbproject/Makefile-genesis.properties
+++ b/nbproject/Makefile-genesis.properties
@@ -1,13 +1,13 @@
 #
-#Fri Feb 09 01:01:46 GMT 2024
+#Fri Feb 09 02:39:45 GMT 2024
 default.languagetoolchain.version=2.45
 default.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v6.15\\packs\\Microchip\\PIC18F-K_DFP\\1.11.281
 conf.ids=default
 default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v2.45\\bin
-host.id=r4dh-tci1-t
-configurations-xml=81d23757d78ec7a48d7516302ddc5202
+host.id=15x9-xhxp-h1
+configurations-xml=821ab1d2506d2d70aed613b1f72bf50a
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
 default.com-microchip-mplab-nbide-toolchain-xc8-XC8LanguageToolchain.md5=486b02ed36e5bdffb1f797e38fa058e5
-proj.dir=C\:\\Users\\tjhla\\OneDrive - Imperial College London\\ME3\\ECM\\mini-project-energy-saving-automatic-outside-light-tomas-thomas.X
+proj.dir=C\:\\Users\\thoma\\Desktop\\ME3 ECM\\mini-project-energy-saving-automatic-outside-light-tomas-thomas.X
 default.com-microchip-mplab-mdbcore-pk4hybrid-Pk4HybridTooImpl.md5=38058ec39ea8224adcc766836376f0d6
 host.platform=windows
